--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -59,6 +59,16 @@
   pages     = {202--212},
 }
 
+@inproceedings{kira_keira,
+    author = {Kira Davey AND Keira Mullan},
+    title = {Beyond canonical typology: A framework for the typological study of major word classes},
+    booktitle = {15th Biennial Conference of the Association for Linguistic Typology},
+    publisher={Nanyang Technological University},
+    address={Singapore},
+    year = {2024}
+}
+
+
 @article{frank2011insensitivity,
   title={Insensitivity of the human sentence-processing system to hierarchical structure},
   author={Frank, Stefan L and Bod, Rens},
